# gameengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  create_ue5_structure.sh  out.txt
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt
Source/Engine/Core/Private/: Assert.cpp  ConsoleUtils.cpp  Platform.cpp  Time.cpp
Source/Engine/Core/Private/Config/: ConfigSystem.cpp
Source/Engine/Core/Private/Error/: ErrorCodes.cpp  ErrorExample.cpp  ErrorSystem.cpp
Source/Engine/Core/Private/Events/: EventSystem.cpp
Source/Engine/Core/Private/FileSystem/: FilePermissions.cpp  FileSystem.cpp  StandardFileSystem.cpp
Source/Engine/Core/Private/Log/: LogAnalytics.cpp  LogConfig.cpp  LogFilter.cpp  LogPerformance.cpp  LogSinks.cpp  LogSystem.cpp
Source/Engine/Core/Private/Memory/: HeapAllocator.cpp  LinearAllocator.cpp  MemoryAnalyzer.cpp  MemoryDebugger.cpp  MemoryDefragmenter.cpp  MemoryManager.cpp  MemoryPool.cpp  MemoryPoolManager.cpp  MemoryProfiler.cpp  MemoryVisualizer.cpp  PoolAllocator.cpp  StackAllocator.cpp
Source/Engine/Core/Private/String/: StringUtils.cpp
Source/Engine/Core/Private/Test/: ConfigSystemTest.cpp  CoreTest.cpp  ErrorSystemTest.cpp  EventSystemTest.cpp  FilePermissionsTest.cpp  FileSystemTest.cpp  HeapAllocatorTest.cpp  LogSystemTest.cpp  MathTest.cpp  MemoryTest.cpp  ObjectPoolTest.cpp  ReflectionTest.cpp  SerializationTest.cpp  StringUtilsTest.cpp  ThreadPoolTest.cpp
Source/Engine/Core/Private/Threading/: ThreadPool.cpp
Source/Engine/Core/Private/UUID/: UUID.cpp
Source/Engine/Core/Public/: Assert.h  ConsoleUtils.h  CoreTypes.h  Format.h  Platform.h  Time.h  Window.h
Source/Engine/Core/Public/Config/: ConfigSystem.h
Source/Engine/Core/Public/Error/: ErrorCodes.h  ErrorSystem.h  Result.h
Source/Engine/Core/Public/Events/: EventSystem.h  EventTypes.h  EventUtils.h
Source/Engine/Core/Public/FileSystem/: FilePermissions.h  FileSystem.h  StandardFileSystem.h
Source/Engine/Core/Public/Log/: LogAnalytics.h  LogCommon.h  LogConfig.h  LogFilter.h  LogPerformance.h  LogSinks.h  LogSystem.h
Source/Engine/Core/Public/Math/: Matrix.h  Quaternion.h  Vector.h
Source/Engine/Core/Public/Memory/: Allocators.h  HeapAllocator.h  IAllocator.h  MemoryAnalyzer.h  MemoryDebugger.h  MemoryDefragmenter.h  MemoryManager.h  MemoryPool.h  MemoryPoolManager.h  MemoryProfiler.h  MemorySystem.h  MemoryTypes.h  MemoryVisualizer.h  ObjectPool.h  PoolAllocator.h  StackAllocator.h
Source/Engine/Core/Public/Reflection/: MethodInfo.h  ReflectionMacros.h  TypeInfo.h  TypeRegistrar.h
Source/Engine/Core/Public/Serialization/: Serializer.h
Source/Engine/Core/Public/String/: StringUtils.h
Source/Engine/Core/Public/Threading/: ThreadPool.h  ThreadPoolConfig.h  ThreadPoolStats.h  ThreadTask.h
Source/Engine/Core/Public/UUID/: UUID.h
Source/Engine/Private/Core/: ConsoleUtils.cpp  Platform.cpp  Time.cpp
Source/Engine/Private/Core/Config/: ConfigSystem.cpp
Source/Engine/Private/Core/Error/: ErrorCodes.cpp  ErrorExample.cpp  ErrorSystem.cpp
Source/Engine/Private/Core/Events/: EventSystem.cpp
Source/Engine/Private/Core/FileSystem/: FilePermissions.cpp  FileSystem.cpp  StandardFileSystem.cpp
Source/Engine/Private/Core/Log/: LogAnalytics.cpp  LogConfig.cpp  LogFilter.cpp  LogPerformance.cpp  LogSinks.cpp  LogSystem.cpp
Source/Engine/Private/Core/Memory/: HeapAllocator.cpp  LinearAllocator.cpp  MemoryAnalyzer.cpp  MemoryDebugger.cpp  MemoryDefragmenter.cpp  MemoryManager.cpp  MemoryPool.cpp  MemoryPoolManager.cpp  MemoryProfiler.cpp  MemoryVisualizer.cpp  PoolAllocator.cpp  StackAllocator.cpp
Source/Engine/Private/Core/String/: StringUtils.cpp
Source/Engine/Private/Core/Test/: ConfigSystemTest.cpp  CoreTest.cpp  ErrorSystemTest.cpp  FilePermissionsTest.cpp  FileSystemTest.cpp  HeapAllocatorTest.cpp  LogSystemTest.cpp  MathTest.cpp  MemoryTest.cpp  SerializationTest.cpp  StringUtilsTest.cpp  ThreadPoolTest.cpp
Source/Engine/Private/Core/Threading/: ThreadPool.cpp
Source/Engine/Private/Rendering/RHI/Vulkan/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanContext.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRHI.cpp  VulkanRHI.h  VulkanResources.cpp  VulkanResources.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSync.cpp
Source/Engine/Public/Core/: Assert.h  CoreNamespace.h  Input.h  SignalHandler.h
Source/Engine/Public/Core/Config/: ConfigSystem.h
Source/Engine/Public/Core/Error/: ErrorCodes.h  ErrorSystem.h  Result.h
Source/Engine/Public/Core/Events/: EventSystem.h  EventTypes.h
Source/Engine/Public/Core/FileSystem/: FilePermissions.h  FileSystem.h  StandardFileSystem.h
Source/Engine/Public/Core/Log/: LogAnalytics.h  LogConfig.h  LogFilter.h  LogPerformance.h  LogSinks.h  LogSystem.h
Source/Engine/Public/Core/Math/: Matrix.h  Quaternion.h  Vector.h
Source/Engine/Public/Core/Memory/: Allocators.h  HeapAllocator.h  LinearAllocator.h  MemoryAnalyzer.h  MemoryDebugger.h  MemoryDefragmenter.h  MemoryPool.h  MemoryPoolManager.h  MemoryProfiler.h  MemorySystem.h  MemoryTypes.h  MemoryVisualizer.h  MovableMutex.h  ObjectPool.h
Source/Engine/Public/Core/Reflection/: IReflectable.h  PropertyInfo.h  ReflectionMacros.h
Source/Engine/Public/Core/Serialization/: Serializer.h
Source/Engine/Public/Core/String/: StringUtils.h
Source/Engine/Public/Core/Threading/: ThreadPool.h  ThreadPoolConfig.h  ThreadPoolStats.h
Source/Engine/Public/Core/UUID/: UUID.h
Source/Engine/Public/Rendering/RHI/: RHI.h  RHICommandList.h  RHIContext.h  RHIDefinitions.h  RHIDevice.h
Source/Engine/Rendering/: CMakeLists.txt
Source/Engine/Rendering/Private/RHI/Example/: RHIExample.cpp
Source/Engine/Rendering/Public/RHI/: RHI.h  RHIAdvancedSync.h  RHIAsyncCompute.h  RHICommandList.h  RHICommands.h  RHIDefinitions.h  RHIDevice.h  RHIMemory.h  RHIMeshShader.h  RHIModule.h  RHIOperators.h  RHIPipelineState.h  RHIPointers.h  RHIQueryHeap.h  RHIRayTracing.h  RHIResources.h  RHIShaderCompiler.h  RHIShaderFeedback.h  RHIShaderHotReload.h  RHISparseResources.h  RHISync.h  RHIVariableRateShading.h
(+51 files in other folders)
